--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -22,6 +22,10 @@
   font-size: large;
 }
 
+.App-main-container {
+  padding: 10px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
