--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -24,6 +24,12 @@
   font-size: large;
 }
 
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
